syntax = "proto3";
package order;
option go_package = "github.com/sudhin-az/FOOD-ORDERING/order-servie/proto";

service OrderService {
    rpc PlaceOrder (PlaceOrderRequest) returns (PlaceOrderResponse);
    rpc GetOrdersByUser(UserRequest) returns (OrderList);
    rpc GetOrderById(OrderRequest) returns (OrderResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (UpdateOrderStatusResponse);
    rpc GetAllOrders(Empty) returns (Orderlist);
}

message PlaceOrderRequest {
    string user_id = 1;
    repeated string item_ids = 2;
    repeated int32 quantities = 3;
    string delivery_address = 4;
}
message PlaceOrderResponse {
    string order_id = 1;
    string status = 2;
    string message = 3;
    double total_amount = 4;
}

message UserRequest {
    string user_id = 1;
}

message OrderRequest {
    string order_id = 1;
}

message OrderResponse {
    string order_id = 1;
    string user_id = 2;
    
}

message Order {
    string order_id = 1;
    string user_id = 2;
    repeated string item_ids = 3;
    string status = 4;
}

message OrderList {
    repeated Order orders = 1;
}